--- a/package.json
+++ b/package.json
@@ -9,17 +9,31 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@portabletext/react": "^2.0.3",
+    "@sanity/client": "^5.4.2",
+    "@sanity/image-url": "^1.0.2",
+    "@types/gapi": "^0.0.44",
     "@types/node": "18.15.13",
     "@types/react": "18.0.37",
     "@types/react-dom": "18.0.11",
-    "autoprefixer": "10.4.14",
     "eslint": "8.38.0",
     "eslint-config-next": "13.3.0",
     "next": "13.3.0",
-    "postcss": "8.4.23",
+    "next-auth": "^4.22.1",
+    "next-sanity": "^4.1.7",
+    "next-sanity-client": "^1.0.6",
+    "next-sanity-image": "^6.0.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "tailwindcss": "3.3.1",
-    "typescript": "5.0.4"
+    "react-icons": "^4.8.0",
+    "react-loader-spinner": "^5.3.4",
+    "react-masonry-css": "^1.0.16",
+    "typescript": "5.0.4",
+    "uuid": "^9.0.0"
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.14",
+    "postcss": "^8.4.23",
+    "tailwindcss": "^3.3.1"
   }
 }
