--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "next-sanity-image": "^6.0.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.43.9",
     "react-icons": "^4.8.0",
     "react-loader-spinner": "^5.3.4",
     "react-masonry-css": "^1.0.16",
