--- a/package.json
+++ b/package.json
@@ -10,8 +10,7 @@
   },
   "dependencies": {
     "@portabletext/react": "^2.0.3",
-    "@sanity/client": "^5.4.2",
-    "@sanity/image-url": "^1.0.2",
+    "@reduxjs/toolkit": "^1.9.5",
     "@types/gapi": "^0.0.44",
     "@types/node": "18.15.13",
     "@types/react": "18.0.37",
@@ -25,10 +24,11 @@
     "next-sanity-image": "^6.0.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-hook-form": "^7.43.9",
     "react-icons": "^4.8.0",
     "react-loader-spinner": "^5.3.4",
     "react-masonry-css": "^1.0.16",
+    "react-redux": "^8.0.5",
+    "redux": "^4.2.1",
     "typescript": "5.0.4",
     "uuid": "^9.0.0"
   },
